# spot-example

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-release.yml
src/spotexample/: __init__.py  plugin.py
